@@ -5,6 +5,7 @@
 * Fix - Refactor `WCS_Meta_Box_Subscription_Data::save` to support HPOS stores, fixing a PHP warning notice when updating an order via the Edit Order screen.
 * Fix - Set the `download_permissions_granted` value when purchasing a downloadable subscription product when HPOS is enabled.
 * Fix - When a customer changes their address on their account or subscription, make sure the new address is saved when HPOS is enabled.
+* Fix - Removed the potential for an infinite loop when getting a subscription's related orders while the subscription is being loaded.
 * Update - Replace `get_post_type()` calls in `WC_Subscriptions_Manager` for HPOS support.
 * Update - Replace `get_post_type()` calls in `WC_Subscriptions_Synchroniser` for HPOS support.
 
